[package]
name = "hitrace-sys"
version = "0.1.0"
edition = "2021"
keywords = ["OpenHarmony", "HarmonyOS", "hitrace", "tracing"]
license = "Apache-2.0"
description = "Bindings to the HiTrace tracing system of OpenHarmony"
repository = "https://github.com/jschwe/hitrace-sys"
readme = "README.md"
include = ["/src"]